src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SIGMA
Rule 1     SIGMA -> doctype ARTICLE
Rule 2     ARTICLE -> article INFO TITLE CONT_A_S cierreArticle
Rule 3     ARTICLE -> article TITLE CONT_A_S cierreArticle
Rule 4     ARTICLE -> article INFO CONT_A_S cierreArticle
Rule 5     ARTICLE -> article CONT_A_S cierreArticle
Rule 6     INFO -> info CONT_INFO cierreInfo
Rule 7     CONT_INFO -> ELEM_INFO CONT_INFO
Rule 8     CONT_INFO -> ELEM_INFO
Rule 9     ELEM_INFO -> MEDIA_OBJECT
Rule 10    ELEM_INFO -> ABSTRACT
Rule 11    ELEM_INFO -> ADDRESS
Rule 12    ELEM_INFO -> AUTHOR
Rule 13    ELEM_INFO -> DATE
Rule 14    ELEM_INFO -> COPYRIGHT
Rule 15    ELEM_INFO -> TITLE
Rule 16    SECTION -> section CONT_A_S cierreSection
Rule 17    SECTION -> section INFO CONT_A_S cierreSection
Rule 18    SECTION -> section TITLE CONT_A_S cierreSection
Rule 19    SECTION -> section INFO TITLE CONT_A_S cierreSection
Rule 20    SECTIONS -> SECTION
Rule 21    SECTIONS -> SECTION SECTIONS
Rule 22    SECTIONS -> SIMPLE_SEC
Rule 23    SECTIONS -> SIMPLE_SEC SECTIONS
Rule 24    CONT_A_S -> CONT_1
Rule 25    CONT_A_S -> CONT_1 CONT_A_S
Rule 26    CONT_A_S -> CONT_1 SECTIONS
Rule 27    CONT_A_S -> CONT_1 SECTIONS CONT_A_S
Rule 28    CONT_1 -> ITEMIZED_LIST
Rule 29    CONT_1 -> IMPORTANT
Rule 30    CONT_1 -> PARA
Rule 31    CONT_1 -> SIMPARA
Rule 32    CONT_1 -> ADDRESS
Rule 33    CONT_1 -> MEDIA_OBJECT
Rule 34    CONT_1 -> INFORMAL_TABLE
Rule 35    CONT_1 -> COMMENT
Rule 36    CONT_1 -> ABSTRACT
Rule 37    SIMPLE_SEC -> simpleSection CONT_SS cierreSimpleSection
Rule 38    SIMPLE_SEC -> simpleSection INFO CONT_SS cierreSimpleSection
Rule 39    SIMPLE_SEC -> simpleSection TITLE CONT_SS cierreSimpleSection
Rule 40    SIMPLE_SEC -> simpleSection INFO TITLE CONT_SS cierreSimpleSection
Rule 41    CONT_SS -> CONT_1
Rule 42    CONT_SS -> CONT_1 CONT_SS
Rule 43    ABSTRACT -> abstract TITLE cierreAbstract
Rule 44    ABSTRACT -> abstract TITLE PARAS cierreAbstract
Rule 45    TITLE -> title CONT_TITLE cierreTitle
Rule 46    CONT_TITLE -> ELEM_TITLE
Rule 47    CONT_TITLE -> ELEM_TITLE CONT_TITLE
Rule 48    ELEM_TITLE -> contenido_texto
Rule 49    ELEM_TITLE -> EMPHASIS
Rule 50    ELEM_TITLE -> LINK
Rule 51    ELEM_TITLE -> EMAIL
Rule 52    PARAS -> PARA
Rule 53    PARAS -> SIMPARA
Rule 54    PARAS -> PARA PARAS
Rule 55    PARAS -> SIMPARA PARAS
Rule 56    PARA -> para CONT_PARA cierrePara
Rule 57    CONT_PARA -> ELEM_PARA
Rule 58    CONT_PARA -> ELEM_PARA CONT_PARA
Rule 59    ELEM_PARA -> contenido_texto
Rule 60    ELEM_PARA -> EMPHASIS
Rule 61    ELEM_PARA -> LINK
Rule 62    ELEM_PARA -> EMAIL
Rule 63    ELEM_PARA -> AUTHOR
Rule 64    ELEM_PARA -> COMMENT
Rule 65    ELEM_PARA -> ITEMIZED_LIST
Rule 66    ELEM_PARA -> IMPORTANT
Rule 67    ELEM_PARA -> ADDRESS
Rule 68    ELEM_PARA -> MEDIA_OBJECT
Rule 69    ELEM_PARA -> INFORMAL_TABLE
Rule 70    ITEMIZED_LIST -> itemizedlist LIST_ITEM cierreItemizedlist
Rule 71    MEDIA_OBJECT -> mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
Rule 72    MEDIA_OBJECT -> mediaObject CONT_MEDIA_OBJECT cierreMediaObject
Rule 73    CONT_MEDIA_OBJECT -> IMAGE_OBJECT
Rule 74    CONT_MEDIA_OBJECT -> VIDEO_OBJECT
Rule 75    CONT_MEDIA_OBJECT -> IMAGE_OBJECT MEDIA_OBJECT
Rule 76    CONT_MEDIA_OBJECT -> VIDEO_OBJECT MEDIA_OBJECT
Rule 77    IMAGE_OBJECT -> imageObject INFO imageData cierreImageObject
Rule 78    IMAGE_OBJECT -> imageObject imageData cierreImageObject
Rule 79    VIDEO_OBJECT -> videoObject INFO imageData cierreVideoObject
Rule 80    VIDEO_OBJECT -> videoObject videoData cierreVideoObject
Rule 81    LIST_ITEM -> listItem CONT_ITEM cierreListItem
Rule 82    CONT_ITEM -> CONT_1
Rule 83    CONT_ITEM -> CONT_1 CONT_ITEM
Rule 84    AUTHOR -> author CONT_AUTHOR cierreAuthor
Rule 85    CONT_AUTHOR -> FIRSTNAME
Rule 86    CONT_AUTHOR -> SURNAME
Rule 87    CONT_AUTHOR -> EMAIL
Rule 88    CONT_AUTHOR -> FIRSTNAME SURNAME
Rule 89    CONT_AUTHOR -> FIRSTNAME EMAIL
Rule 90    CONT_AUTHOR -> SURNAME EMAIL
Rule 91    CONT_AUTHOR -> FIRSTNAME SURNAME EMAIL
Rule 92    ADDRESS -> address cierreAddress
Rule 93    ADDRESS -> address CONT_ADDRESS cierreAddress
Rule 94    CONT_ADDRESS -> ELEM_ADDRESS
Rule 95    CONT_ADDRESS -> ELEM_ADDRESS CONT_ADDRESS
Rule 96    ELEM_ADDRESS -> STREET
Rule 97    ELEM_ADDRESS -> CITY
Rule 98    ELEM_ADDRESS -> STATE
Rule 99    ELEM_ADDRESS -> PHONE
Rule 100   ELEM_ADDRESS -> EMAIL
Rule 101   ELEM_ADDRESS -> contenido_texto
Rule 102   COPYRIGHT -> copyright YEAR cierreCopyright
Rule 103   COPYRIGHT -> copyright YEAR HOLDER cierreCopyright
Rule 104   SIMPARA -> simpara CONT_SECL cierreSimpara
Rule 105   EMPHASIS -> emphasis CONT_SECL cierreEmphasis
Rule 106   COMMENT -> comment CONT_SECL cierreComment
Rule 107   LINK -> link CONT_SECL cierreLink
Rule 108   CONT_SECL -> CONT_2
Rule 109   CONT_SECL -> CONT_2 CONT_SECL
Rule 110   CONT_2 -> contenido_texto
Rule 111   CONT_2 -> EMPHASIS
Rule 112   CONT_2 -> LINK
Rule 113   CONT_2 -> EMAIL
Rule 114   CONT_2 -> AUTHOR
Rule 115   CONT_2 -> COMMENT
Rule 116   IMPORTANT -> important TITLE CONT_IMPORTANT cierreImportant
Rule 117   IMPORTANT -> important CONT_IMPORTANT cierreImportant
Rule 118   CONT_IMPORTANT -> CONT_1
Rule 119   CONT_IMPORTANT -> CONT_1 CONT_IMPORTANT
Rule 120   CONT_VAR -> CONT_3
Rule 121   CONT_VAR -> CONT_3 CONT_VAR
Rule 122   CONT_3 -> contenido_texto
Rule 123   CONT_3 -> LINK
Rule 124   CONT_3 -> EMPHASIS
Rule 125   CONT_3 -> COMMENT
Rule 126   FIRSTNAME -> firstname CONT_VAR cierreFirstname
Rule 127   SURNAME -> surname CONT_VAR cierreSurname
Rule 128   STREET -> street CONT_VAR cierreStreet
Rule 129   CITY -> city CONT_VAR cierreCity
Rule 130   STATE -> state CONT_VAR cierreState
Rule 131   PHONE -> phone CONT_VAR cierrePhone
Rule 132   EMAIL -> email CONT_VAR cierreEmail
Rule 133   DATE -> date CONT_VAR cierreDate
Rule 134   YEAR -> year CONT_VAR cierreYear
Rule 135   HOLDER -> holder CONT_VAR cierreHolder
Rule 136   INFORMAL_TABLE -> informalTable TABLE_MEDIA cierreInformalTable
Rule 137   INFORMAL_TABLE -> informalTable TABLE_GROUP cierreInformalTable
Rule 138   TABLE_MEDIA -> MEDIA_OBJECT
Rule 139   TABLE_MEDIA -> MEDIA_OBJECT TABLE_MEDIA
Rule 140   TABLE_GROUP -> TGROUP
Rule 141   TABLE_GROUP -> TGROUP TABLE_GROUP
Rule 142   TGROUP -> tgroup THEAD TFOOT TBODY cierreTgroup
Rule 143   TGROUP -> tgroup THEAD TBODY cierreTgroup
Rule 144   TGROUP -> tgroup TFOOT TBODY cierreTgroup
Rule 145   TGROUP -> tgroup TBODY cierreTgroup
Rule 146   CONT_T -> ROW
Rule 147   CONT_T -> ROW CONT_T
Rule 148   THEAD -> thead CONT_T cierreThead
Rule 149   TFOOT -> tfoot CONT_T cierreTfoot
Rule 150   TBODY -> tbody CONT_T cierreTbody
Rule 151   ROW -> row CONT_ROW_1 cierreRow
Rule 152   ROW -> row CONT_ROW_2 cierreRow
Rule 153   CONT_ROW_1 -> ENTRY
Rule 154   CONT_ROW_1 -> ENTRY CONT_ROW_1
Rule 155   CONT_ROW_2 -> ENTRYTBL
Rule 156   CONT_ROW_2 -> ENTRYTBL CONT_ROW_2
Rule 157   ENTRY -> entry CONT_ENTRY cierreEntry
Rule 158   ENTRYTBL -> entrytbl THEAD TBODY cierreEntrytbl
Rule 159   ENTRYTBL -> entrytbl TBODY cierreEntrytbl
Rule 160   CONT_ENTRY -> contenido_texto
Rule 161   CONT_ENTRY -> contenido_texto CONT_ENTRY
Rule 162   CONT_ENTRY -> ITEMIZED_LIST
Rule 163   CONT_ENTRY -> ITEMIZED_LIST CONT_ENTRY
Rule 164   CONT_ENTRY -> IMPORTANT
Rule 165   CONT_ENTRY -> IMPORTANT CONT_ENTRY
Rule 166   CONT_ENTRY -> PARA
Rule 167   CONT_ENTRY -> PARA CONT_ENTRY
Rule 168   CONT_ENTRY -> SIMPARA
Rule 169   CONT_ENTRY -> SIMPARA CONT_ENTRY
Rule 170   CONT_ENTRY -> COMMENT
Rule 171   CONT_ENTRY -> COMMENT CONT_ENTRY
Rule 172   CONT_ENTRY -> ABSTRACT
Rule 173   CONT_ENTRY -> ABSTRACT CONT_ENTRY
Rule 174   CONT_ENTRY -> MEDIA_OBJECT
Rule 175   CONT_ENTRY -> MEDIA_OBJECT CONT_ENTRY

Terminals, with rules where they appear

abstract             : 43 44
address              : 92 93
article              : 2 3 4 5
author               : 84
cierreAbstract       : 43 44
cierreAddress        : 92 93
cierreArticle        : 2 3 4 5
cierreAuthor         : 84
cierreCity           : 129
cierreComment        : 106
cierreCopyright      : 102 103
cierreDate           : 133
cierreEmail          : 132
cierreEmphasis       : 105
cierreEntry          : 157
cierreEntrytbl       : 158 159
cierreFirstname      : 126
cierreHolder         : 135
cierreImageObject    : 77 78
cierreImportant      : 116 117
cierreInfo           : 6
cierreInformalTable  : 136 137
cierreItemizedlist   : 70
cierreLink           : 107
cierreListItem       : 81
cierreMediaObject    : 71 72
cierrePara           : 56
cierrePhone          : 131
cierreRow            : 151 152
cierreSection        : 16 17 18 19
cierreSimpara        : 104
cierreSimpleSection  : 37 38 39 40
cierreState          : 130
cierreStreet         : 128
cierreSurname        : 127
cierreTbody          : 150
cierreTfoot          : 149
cierreTgroup         : 142 143 144 145
cierreThead          : 148
cierreTitle          : 45
cierreVideoObject    : 79 80
cierreYear           : 134
city                 : 129
comment              : 106
contenido_texto      : 48 59 101 110 122 160 161
copyright            : 102 103
date                 : 133
doctype              : 1
email                : 132
emphasis             : 105
entry                : 157
entrytbl             : 158 159
error                : 
firstname            : 126
holder               : 135
imageData            : 77 78 79
imageObject          : 77 78
important            : 116 117
info                 : 6
informalTable        : 136 137
itemizedlist         : 70
link                 : 107
listItem             : 81
mediaObject          : 71 72
para                 : 56
phone                : 131
row                  : 151 152
section              : 16 17 18 19
simpara              : 104
simpleSection        : 37 38 39 40
state                : 130
street               : 128
surname              : 127
tbody                : 150
tfoot                : 149
tgroup               : 142 143 144 145
thead                : 148
title                : 45
videoData            : 80
videoObject          : 79 80
year                 : 134

Nonterminals, with rules where they appear

ABSTRACT             : 10 36 172 173
ADDRESS              : 11 32 67
ARTICLE              : 1
AUTHOR               : 12 63 114
CITY                 : 97
COMMENT              : 35 64 115 125 170 171
CONT_1               : 24 25 26 27 41 42 82 83 118 119
CONT_2               : 108 109
CONT_3               : 120 121
CONT_ADDRESS         : 93 95
CONT_AUTHOR          : 84
CONT_A_S             : 2 3 4 5 16 17 18 19 25 27
CONT_ENTRY           : 157 161 163 165 167 169 171 173 175
CONT_IMPORTANT       : 116 117 119
CONT_INFO            : 6 7
CONT_ITEM            : 81 83
CONT_MEDIA_OBJECT    : 71 72
CONT_PARA            : 56 58
CONT_ROW_1           : 151 154
CONT_ROW_2           : 152 156
CONT_SECL            : 104 105 106 107 109
CONT_SS              : 37 38 39 40 42
CONT_T               : 147 148 149 150
CONT_TITLE           : 45 47
CONT_VAR             : 121 126 127 128 129 130 131 132 133 134 135
COPYRIGHT            : 14
DATE                 : 13
ELEM_ADDRESS         : 94 95
ELEM_INFO            : 7 8
ELEM_PARA            : 57 58
ELEM_TITLE           : 46 47
EMAIL                : 51 62 87 89 90 91 100 113
EMPHASIS             : 49 60 111 124
ENTRY                : 153 154
ENTRYTBL             : 155 156
FIRSTNAME            : 85 88 89 91
HOLDER               : 103
IMAGE_OBJECT         : 73 75
IMPORTANT            : 29 66 164 165
INFO                 : 2 4 17 19 38 40 71 77 79
INFORMAL_TABLE       : 34 69
ITEMIZED_LIST        : 28 65 162 163
LINK                 : 50 61 112 123
LIST_ITEM            : 70
MEDIA_OBJECT         : 9 33 68 75 76 138 139 174 175
PARA                 : 30 52 54 166 167
PARAS                : 44 54 55
PHONE                : 99
ROW                  : 146 147
SECTION              : 20 21
SECTIONS             : 21 23 26 27
SIGMA                : 0
SIMPARA              : 31 53 55 168 169
SIMPLE_SEC           : 22 23
STATE                : 98
STREET               : 96
SURNAME              : 86 88 90 91
TABLE_GROUP          : 137 141
TABLE_MEDIA          : 136 139
TBODY                : 142 143 144 145 158 159
TFOOT                : 142 144
TGROUP               : 140 141
THEAD                : 142 143 158
TITLE                : 2 3 15 18 19 39 40 43 44 116
VIDEO_OBJECT         : 74 76
YEAR                 : 102 103

Parsing method: LALR

state 0

    (0) S' -> . SIGMA
    (1) SIGMA -> . doctype ARTICLE

    doctype         shift and go to state 2

    SIGMA                          shift and go to state 1

state 1

    (0) S' -> SIGMA .



state 2

    (1) SIGMA -> doctype . ARTICLE
    (2) ARTICLE -> . article INFO TITLE CONT_A_S cierreArticle
    (3) ARTICLE -> . article TITLE CONT_A_S cierreArticle
    (4) ARTICLE -> . article INFO CONT_A_S cierreArticle
    (5) ARTICLE -> . article CONT_A_S cierreArticle

    article         shift and go to state 4

    ARTICLE                        shift and go to state 3

state 3

    (1) SIGMA -> doctype ARTICLE .

    $end            reduce using rule 1 (SIGMA -> doctype ARTICLE .)


state 4

    (2) ARTICLE -> article . INFO TITLE CONT_A_S cierreArticle
    (3) ARTICLE -> article . TITLE CONT_A_S cierreArticle
    (4) ARTICLE -> article . INFO CONT_A_S cierreArticle
    (5) ARTICLE -> article . CONT_A_S cierreArticle
    (6) INFO -> . info CONT_INFO cierreInfo
    (45) TITLE -> . title CONT_TITLE cierreTitle
    (24) CONT_A_S -> . CONT_1
    (25) CONT_A_S -> . CONT_1 CONT_A_S
    (26) CONT_A_S -> . CONT_1 SECTIONS
    (27) CONT_A_S -> . CONT_1 SECTIONS CONT_A_S
    (28) CONT_1 -> . ITEMIZED_LIST
    (29) CONT_1 -> . IMPORTANT
    (30) CONT_1 -> . PARA
    (31) CONT_1 -> . SIMPARA
    (32) CONT_1 -> . ADDRESS
    (33) CONT_1 -> . MEDIA_OBJECT
    (34) CONT_1 -> . INFORMAL_TABLE
    (35) CONT_1 -> . COMMENT
    (36) CONT_1 -> . ABSTRACT
    (70) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (116) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (117) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (56) PARA -> . para CONT_PARA cierrePara
    (104) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (92) ADDRESS -> . address cierreAddress
    (93) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (71) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (72) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (136) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (137) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (106) COMMENT -> . comment CONT_SECL cierreComment
    (43) ABSTRACT -> . abstract TITLE cierreAbstract
    (44) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    info            shift and go to state 8
    title           shift and go to state 9
    itemizedlist    shift and go to state 20
    important       shift and go to state 21
    para            shift and go to state 22
    simpara         shift and go to state 23
    address         shift and go to state 24
    mediaObject     shift and go to state 25
    informalTable   shift and go to state 26
    comment         shift and go to state 27
    abstract        shift and go to state 28

    INFO                           shift and go to state 5
    TITLE                          shift and go to state 6
    CONT_A_S                       shift and go to state 7
    CONT_1                         shift and go to state 10
    ITEMIZED_LIST                  shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIA_OBJECT                   shift and go to state 16
    INFORMAL_TABLE                 shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 5

    (2) ARTICLE -> article INFO . TITLE CONT_A_S cierreArticle
    (4) ARTICLE -> article INFO . CONT_A_S cierreArticle
    (45) TITLE -> . title CONT_TITLE cierreTitle
    (24) CONT_A_S -> . CONT_1
    (25) CONT_A_S -> . CONT_1 CONT_A_S
    (26) CONT_A_S -> . CONT_1 SECTIONS
    (27) CONT_A_S -> . CONT_1 SECTIONS CONT_A_S
    (28) CONT_1 -> . ITEMIZED_LIST
    (29) CONT_1 -> . IMPORTANT
    (30) CONT_1 -> . PARA
    (31) CONT_1 -> . SIMPARA
    (32) CONT_1 -> . ADDRESS
    (33) CONT_1 -> . MEDIA_OBJECT
    (34) CONT_1 -> . INFORMAL_TABLE
    (35) CONT_1 -> . COMMENT
    (36) CONT_1 -> . ABSTRACT
    (70) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (116) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (117) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (56) PARA -> . para CONT_PARA cierrePara
    (104) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (92) ADDRESS -> . address cierreAddress
    (93) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (71) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (72) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (136) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (137) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (106) COMMENT -> . comment CONT_SECL cierreComment
    (43) ABSTRACT -> . abstract TITLE cierreAbstract
    (44) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    title           shift and go to state 9
    itemizedlist    shift and go to state 20
    important       shift and go to state 21
    para            shift and go to state 22
    simpara         shift and go to state 23
    address         shift and go to state 24
    mediaObject     shift and go to state 25
    informalTable   shift and go to state 26
    comment         shift and go to state 27
    abstract        shift and go to state 28

    TITLE                          shift and go to state 29
    CONT_A_S                       shift and go to state 30
    CONT_1                         shift and go to state 10
    ITEMIZED_LIST                  shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIA_OBJECT                   shift and go to state 16
    INFORMAL_TABLE                 shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 6

    (3) ARTICLE -> article TITLE . CONT_A_S cierreArticle
    (24) CONT_A_S -> . CONT_1
    (25) CONT_A_S -> . CONT_1 CONT_A_S
    (26) CONT_A_S -> . CONT_1 SECTIONS
    (27) CONT_A_S -> . CONT_1 SECTIONS CONT_A_S
    (28) CONT_1 -> . ITEMIZED_LIST
    (29) CONT_1 -> . IMPORTANT
    (30) CONT_1 -> . PARA
    (31) CONT_1 -> . SIMPARA
    (32) CONT_1 -> . ADDRESS
    (33) CONT_1 -> . MEDIA_OBJECT
    (34) CONT_1 -> . INFORMAL_TABLE
    (35) CONT_1 -> . COMMENT
    (36) CONT_1 -> . ABSTRACT
    (70) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (116) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (117) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (56) PARA -> . para CONT_PARA cierrePara
    (104) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (92) ADDRESS -> . address cierreAddress
    (93) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (71) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (72) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (136) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (137) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (106) COMMENT -> . comment CONT_SECL cierreComment
    (43) ABSTRACT -> . abstract TITLE cierreAbstract
    (44) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    itemizedlist    shift and go to state 20
    important       shift and go to state 21
    para            shift and go to state 22
    simpara         shift and go to state 23
    address         shift and go to state 24
    mediaObject     shift and go to state 25
    informalTable   shift and go to state 26
    comment         shift and go to state 27
    abstract        shift and go to state 28

    CONT_A_S                       shift and go to state 31
    CONT_1                         shift and go to state 10
    ITEMIZED_LIST                  shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIA_OBJECT                   shift and go to state 16
    INFORMAL_TABLE                 shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 7

    (5) ARTICLE -> article CONT_A_S . cierreArticle

    cierreArticle   shift and go to state 32


state 8

    (6) INFO -> info . CONT_INFO cierreInfo
    (7) CONT_INFO -> . ELEM_INFO CONT_INFO
    (8) CONT_INFO -> . ELEM_INFO
    (9) ELEM_INFO -> . MEDIA_OBJECT
    (10) ELEM_INFO -> . ABSTRACT
    (11) ELEM_INFO -> . ADDRESS
    (12) ELEM_INFO -> . AUTHOR
    (13) ELEM_INFO -> . DATE
    (14) ELEM_INFO -> . COPYRIGHT
    (15) ELEM_INFO -> . TITLE
    (71) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (72) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (43) ABSTRACT -> . abstract TITLE cierreAbstract
    (44) ABSTRACT -> . abstract TITLE PARAS cierreAbstract
    (92) ADDRESS -> . address cierreAddress
    (93) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (84) AUTHOR -> . author CONT_AUTHOR cierreAuthor
    (133) DATE -> . date CONT_VAR cierreDate
    (102) COPYRIGHT -> . copyright YEAR cierreCopyright
    (103) COPYRIGHT -> . copyright YEAR HOLDER cierreCopyright
    (45) TITLE -> . title CONT_TITLE cierreTitle

    mediaObject     shift and go to state 25
    abstract        shift and go to state 28
    address         shift and go to state 24
    author          shift and go to state 42
    date            shift and go to state 43
    copyright       shift and go to state 44
    title           shift and go to state 9

    CONT_INFO                      shift and go to state 33
    ELEM_INFO                      shift and go to state 34
    MEDIA_OBJECT                   shift and go to state 35
    ABSTRACT                       shift and go to state 36
    ADDRESS                        shift and go to state 37
    AUTHOR                         shift and go to state 38
    DATE                           shift and go to state 39
    COPYRIGHT                      shift and go to state 40
    TITLE                          shift and go to state 41

state 9

    (45) TITLE -> title . CONT_TITLE cierreTitle
    (46) CONT_TITLE -> . ELEM_TITLE
    (47) CONT_TITLE -> . ELEM_TITLE CONT_TITLE
    (48) ELEM_TITLE -> . contenido_texto
    (49) ELEM_TITLE -> . EMPHASIS
    (50) ELEM_TITLE -> . LINK
    (51) ELEM_TITLE -> . EMAIL
    (105) EMPHASIS -> . emphasis CONT_SECL cierreEmphasis
    (107) LINK -> . link CONT_SECL cierreLink
    (132) EMAIL -> . email CONT_VAR cierreEmail

    contenido_texto shift and go to state 47
    emphasis        shift and go to state 51
    link            shift and go to state 52
    email           shift and go to state 53

    CONT_TITLE                     shift and go to state 45
    ELEM_TITLE                     shift and go to state 46
    EMPHASIS                       shift and go to state 48
    LINK                           shift and go to state 49
    EMAIL                          shift and go to state 50

state 10

    (24) CONT_A_S -> CONT_1 .
    (25) CONT_A_S -> CONT_1 . CONT_A_S
    (26) CONT_A_S -> CONT_1 . SECTIONS
    (27) CONT_A_S -> CONT_1 . SECTIONS CONT_A_S
    (24) CONT_A_S -> . CONT_1
    (25) CONT_A_S -> . CONT_1 CONT_A_S
    (26) CONT_A_S -> . CONT_1 SECTIONS
    (27) CONT_A_S -> . CONT_1 SECTIONS CONT_A_S
    (20) SECTIONS -> . SECTION
    (21) SECTIONS -> . SECTION SECTIONS
    (22) SECTIONS -> . SIMPLE_SEC
    (23) SECTIONS -> . SIMPLE_SEC SECTIONS
    (28) CONT_1 -> . ITEMIZED_LIST
    (29) CONT_1 -> . IMPORTANT
    (30) CONT_1 -> . PARA
    (31) CONT_1 -> . SIMPARA
    (32) CONT_1 -> . ADDRESS
    (33) CONT_1 -> . MEDIA_OBJECT
    (34) CONT_1 -> . INFORMAL_TABLE
    (35) CONT_1 -> . COMMENT
    (36) CONT_1 -> . ABSTRACT
    (16) SECTION -> . section CONT_A_S cierreSection
    (17) SECTION -> . section INFO CONT_A_S cierreSection
    (18) SECTION -> . section TITLE CONT_A_S cierreSection
    (19) SECTION -> . section INFO TITLE CONT_A_S cierreSection
    (37) SIMPLE_SEC -> . simpleSection CONT_SS cierreSimpleSection
    (38) SIMPLE_SEC -> . simpleSection INFO CONT_SS cierreSimpleSection
    (39) SIMPLE_SEC -> . simpleSection TITLE CONT_SS cierreSimpleSection
    (40) SIMPLE_SEC -> . simpleSection INFO TITLE CONT_SS cierreSimpleSection
    (70) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (116) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (117) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (56) PARA -> . para CONT_PARA cierrePara
    (104) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (92) ADDRESS -> . address cierreAddress
    (93) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (71) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (72) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (136) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (137) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (106) COMMENT -> . comment CONT_SECL cierreComment
    (43) ABSTRACT -> . abstract TITLE cierreAbstract
    (44) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    cierreArticle   reduce using rule 24 (CONT_A_S -> CONT_1 .)
    cierreSection   reduce using rule 24 (CONT_A_S -> CONT_1 .)
    section         shift and go to state 58
    simpleSection   shift and go to state 59
    itemizedlist    shift and go to state 20
    important       shift and go to state 21
    para            shift and go to state 22
    simpara         shift and go to state 23
    address         shift and go to state 24
    mediaObject     shift and go to state 25
    informalTable   shift and go to state 26
    comment         shift and go to state 27
    abstract        shift and go to state 28

    CONT_1                         shift and go to state 10
    CONT_A_S                       shift and go to state 54
    SECTIONS                       shift and go to state 55
    SECTION                        shift and go to state 56
    SIMPLE_SEC                     shift and go to state 57
    ITEMIZED_LIST                  shift and go to state 11
    IMPORTANT                      shift and go to state 12
    PARA                           shift and go to state 13
    SIMPARA                        shift and go to state 14
    ADDRESS                        shift and go to state 15
    MEDIA_OBJECT                   shift and go to state 16
    INFORMAL_TABLE                 shift and go to state 17
    COMMENT                        shift and go to state 18
    ABSTRACT                       shift and go to state 19

state 11

    (28) CONT_1 -> ITEMIZED_LIST .

    section         reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    simpleSection   reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    itemizedlist    reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    important       reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    para            reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    simpara         reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    address         reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    mediaObject     reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    informalTable   reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    comment         reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    abstract        reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    cierreArticle   reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    cierreSection   reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    cierreImportant reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    cierreSimpleSection reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)
    cierreListItem  reduce using rule 28 (CONT_1 -> ITEMIZED_LIST .)


state 12

    (29) CONT_1 -> IMPORTANT .
